# graphql-mcp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test.py
bench/: bench.py  dataset.csv  viz.py
discovery_experiments/: README.md  benchmark_schema.txt  create_index.py  query.py
images/: dt.mmd  sequence_diagram.mmd
mock-servers/: github.graphql  gitlab.gql  package.json
src/: embedding.rs  main.rs  schema.graphql
src/common/: explorer.rs  graphql_client.rs  graphql_discovery.rs  graphql_fullschema.rs  mod.rs
test/: test.py
test-client/: Dockerfile  index.html  pyproject.toml  requirements.txt  test.py
test-client/frontend/: index.html
test-client/test_client/: __init__.py
test-client/test_client/frontend/: main.js  styles.css
test-graphql-server/: Dockerfile  pyproject.toml  requirements.txt
test-graphql-server/test_graphql_server/: __init__.py  main.py
