[tool.poetry]
name = "test-client"
version = "0.1.0"
description = "Test client for GraphQL MCP"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
langchain-openai = "0.3.28"
mcp = "1.11.0"
mcp-use = "1.3.6"
pandas = "2.2.3"
fastapi = "*"
uvicorn = {extras = ["standard"], version = ">=0.18.0"}
langchain-community = "^0.3.29"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
